# zvec

./: .gitmodules
.github/workflows/: 01-ci-pipeline.yml  03-macos-linux-build.yml  04-android-build.yml  05-windows-build.yml  06-ios-build.yml  07-linux-riscv-build.yml
cmake/: option.cmake
docs/: int8_quantizer_design.md
examples/c/: CMakeLists.txt
examples/c++/: CMakeLists.txt
python/tests/: test_params.py  test_vamana.py
src/: CMakeLists.txt
src/ailego/: CMakeLists.txt
src/ailego/math/: normalizer.cc  normalizer_fp16.cc
src/binding/c/: CMakeLists.txt  c_api.cc
src/core/: CMakeLists.txt
src/core/interface/: batch_index_bridge.cc  index.cc  index_bridge.cc  index_factory.cc  (+1 more)
src/db/: CMakeLists.txt
src/turbo/: CMakeLists.txt  turbo.cc
src/turbo/avx512_vnni/: CMakeLists.txt
src/turbo/avx512_vnni/record_quantized_int8/: common.h  cosine.cc  cosine.h  squared_euclidean.cc  squared_euclidean.h
src/turbo/avx512_vnni/sift_int8/: squared_euclidean.cc  squared_euclidean.h
src/turbo/avx512_vnni/uniform_int8/: cosine.cc  cosine.h  quantize.cc  squared_euclidean.cc
src/turbo/avx512_vnni/uniform_quantized_int8/: quantize.cc  squared_euclidean.cc
src/turbo/avx512_vnni/unit_scale_int8/: squared_euclidean.cc  squared_euclidean.h
src/turbo/cosine/: avx512_impl.cc  avx512_impl.h
src/turbo/euclidean/: avx512_impl.cc  avx512_impl.h
src/turbo/inner_product/: avx512_inner_product.h
src/turbo/mips_euclidean/: avx512_impl.cc  avx512_impl.h
tests/c/: c_api_test.c
tests/db/: CMakeLists.txt
tools/core/: txt2vecs.cc  vecs_common.h  vecs_reader.h
(+81 files in other folders)
